# si-nov-2018

src/Day-3/code-jam/: CMakeLists.txt  dimensional-grid-implementation.f90  dimensional-grid-interface.f90  structured-grid-implementation.f90  structured-grid-interface.f90  test-dimensional-grid.f90  test-structured-grid.f90
src/Day-4/code-jam/: CMakeLists.txt  assertion-implementation.f90  async-hello-one-step.f90  foo.f90  generic-operators.f90  person-implementation.f90  person-interface.f90  test-person.f90  test-scalar-field.f90  ud-dtio.f90
src/Day-4/hands-on/: CMakeLists.txt  README.md
src/Day-4/hands-on/abstract-calculus/: CMakeLists.txt  scalar-field-interface.f90  spectral-field-module.f90  spectral-field-submodule.f90
src/Day-4/hands-on/tests/: CMakeLists.txt  test-scalar-field.f90
src/Day-4/hands-on/utilities/: CMakeLists.txt  emulated_collectives_interface.f90  object_interface.f90
src/Day-4/prepared-codes/: CMakeLists.txt  async-hello-2015.f90  async-hello-multistep.f90  field-interface.f90  test-abstract-calculus.f90  ud-dtio.f90
